--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -57,6 +57,8 @@ dl.routine-summary dd { margin-bottom: 0.5em; margin-left: 2em; }
 ul li { list-style-type: none; }
 table { empty-cells: show; }
 dd { margin-bottom: 0.35em; }
+input, textarea { background: #F3F6ED; border: #E1D6C6 1px solid; padding: 2px 1em 2px 1em; }
+input.text { background: #FFFFC0; }
 
 p.indent { margin-left: 2em; }
 
