--- a/idldoc/src/templates/header.tt
+++ b/idldoc/src/templates/header.tt
@@ -18,7 +18,7 @@
     
     [% IF ~nosource %]
     <td [% IF current_template eq 'source' %]class="selected"[% END %]>
-      [% IF current_template eq 'profile' %]<a href="[% source_url %]">Source</a>[% ELSE %]Source[% END %]      
+      [% IF current_template eq 'profile' %]<a href="[% source_url %]" tilte="Chromocoded source">Source</a> <a href="[% direct_source_url %]" title=".pro file"><img src="[% relative_root %]idldoc-resources/attach.png" align="top"/></a>[% ELSE %]Source <img src="[% relative_root %]idldoc-resources/attach.png" align="top"/>[% END %]        
     </td>
     [% END %]
     
